3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugin/plugin_python.c, plugin_animator/animator_box.c,
plugin_animator/plugin_animator.c, plugin_logger/arena.c,
plugin_logger/plugin_logger.c: Use HOOK_FREEMEMORY to free memory allocated
   by HOOK-functions. Fix memory leaks.
plugin/plugin_python.c, server/plugin.c, plugin_animator/animator_box.c: Fix
   some more mismatches between plugin interface and implementation.
   CFPython.Get/SetSkillExperience() use 64-bit exp values now.
   CFPython.CastAbility() works again.
Andreas Kirschbaum 2004-10-16

plugin/plugin_python.c, server/plugin.c: Fix type mismatches between plugin
   interface and implementation.
plugin/plugin_python.c, server/plugin.c: Add/remove "static" to/from some
   variables. Fixes a memory leak in CFPython.SaveObject().
plugin/plugin_python.c: Fix reference counting for Python objects.
Andreas Kirschbaum 2004-10-15

common/living.c: Fix exp functions to use the player objects expmul
   value when determining level gains, and not the skills.  Also,
   fix bug where players last hp/sp/grace gain I think was being
   re-rolled when player gained level in skill.
common/loader.l, loader.c: Add better recording of non existant objects
  (no archetype for them) in maps.  Also, handle such objects in
   players inventories properly (which is to just discard them)
common/map.c: Add better logging about discarded archetypes.  Since the
   loader now deals with objects without archs in inventories, that
   code doesn't need to be in the server.
common/object.c: copy_object() was not properly nulling out the
   next field in the event object, pointer to event list was also 